[package]
name = "poem_dev_take_home"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
poem = "3.1.8"

# Serde
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# Error
thiserror = "2.0.12"
anyhow = "1.0.97"

# Docs
poem-openapi = { version = "5", features = ["swagger-ui", "uuid"] }

# Utils
uuid = { version = "1.15.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.40"

dotenvy = "0.15"
envy = "0.4.2"

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
